# my-bpnn-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  autograd.cpp  data_generator.cpp  main.cpp  math.cpp  model.cpp  module.cpp
autograd/: CMakeLists.txt  linear.cpp  linear.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  tseloss.cpp  tseloss.h
autograd/abstract/: autograd_function.cpp  autograd_function.h  basic_function.cpp  basic_function.h  loss_function.cpp  loss_function.h  parametrized_function.cpp  parametrized_function.h
model/: CMakeLists.txt  bpnn.cpp  bpnn.h  bprelunn.cpp  bprelunn.h  sequential_model.cpp  sequential_model.h
model/abstract/: model.cpp  model.h
module/: CMakeLists.txt  bp_relu_module.cpp  bp_relu_module.h  bp_sigmoid_module.cpp  bp_sigmoid_module.h  sequential_module.cpp  sequential_module.h
module/abstract/: module.cpp  module.h
propagation/: CMakeLists.txt  propagation.cpp  propagation.h
utils/: CMakeLists.txt  data_generator.cpp  data_generator.h
